# visualverse

./: CMakeLists.txt  README.md  main.cc  main.cxx  shell.nix
project01/: AND.hdl  AND16.hdl  DMUX.hdl  DMUX4WAY.hdl  DMUX8WAY.hdl  MUX.hdl  MUX16.hdl  MUX4WAY16.hdl  MUX8WAY16.hdl  NOT.hdl  OR.hdl  OR16.hdl  OR8WAY.hdl  XOR.hdl
project02/: ADD16.hdl  ALU.hdl  FULLADDER.hdl  HALFADDER.hdl  INC16.hdl  tmp
project03/: BIT.hdl  RAM.hdl  RAM16K.hdl  RAM512.hdl  REGISTER.hdl
